tests/data/placebo/test_security_group_used/autoscaling.DescribeLaunchConfigurations_1.json
{
  "status_code": 200,
  "data": {
    "LaunchConfigurations": [],
    "ResponseMetadata": {}
  }
}
