tests/data/placebo/test_security_group_used/codebuild.ListProjects_1.json
{
    "status_code": 200,
    "data": {
        "projects": [
        ],
        "ResponseMetadata": {}
    }
}
