tests/data/placebo/test_security_group_used/ec2.DescribeSecurityGroupReferences_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroupReferenceSet": [],
    "ResponseMetadata": {}
  }
}
