tests/data/placebo/test_security_group_used/ec2.DescribeSecurityGroups_2.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "Ipv6Ranges": [],
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-13de8f75"
                            }
                        ], 
                        "PrefixListIds": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-dc0452b8", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-13de8f75"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-ce548cb7"
                            }
                        ], 
                        "PrefixListIds": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-47b2b823", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-ce548cb7"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "71.163.79.221/32"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-4a9ff72e", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-f9cc4d9f"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "launch-wizard-1 created 2016-10-12T16:33:11.006-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": []
                    }
                ], 
                "GroupName": "launch-wizard-1", 
                "VpcId": "vpc-4a9ff72e", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-6bfe7312"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 5432, 
                        "IpRanges": [
                            {
                                "CidrIp": "108.56.194.116/32"
                            }
                        ], 
                        "ToPort": 5432, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": []
                    }
                ], 
                "GroupName": "rds-launch-wizard", 
                "VpcId": "vpc-4a9ff72e", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-f6a42890"
            },
            {
                "Description": "VPC Lambda Sec Group Outbound",
                "GroupName": "VPC Lambda Sec Group",
                "IpPermissions": [],
                "OwnerId": "644160558196", 
                "GroupId": "sg-1c8a186c",
                "IpPermissionsEgress": [
                    {
                        "FromPort": 0,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 65535,
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "VPCLambdaSecGroup"
                    }
                ],
                "VpcId": "vpc-0e03e277"
            },
            {
                "Description": "The instance security group",
                "GroupName": "InstanceSecurityGroup-1A6Y8I3R4AP02",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-0a2cb503a229c31c1",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "InstanceSecurityGroup"
                    }
                ],
                "VpcId": "vpc-0e03e277"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "32a13fdd-ba7b-4b18-9c50-0abb313108d9", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Wed, 02 Nov 2016 11:01:20 GMT"
            }
        }
    }
}
