tests/data/placebo/test_security_group_used/events.ListRules_1.json
{
    "status_code": 200,
    "data": {
        "Rules": [],
        "ResponseMetadata": {}
    }
}
