tests/data/placebo/test_security_group_used/lambda.ListFunctions_1.json
{
    "status_code": 200, 
    "data": {
        "Functions": [
            {
                "Version": "$LATEST", 
                "CodeSha256": "mGsk+d7ABcPEMu6ZwStxbVQtgiHlpZy+VnBq99/LWqs=", 
                "FunctionName": "myIOTFunction", 
                "VpcConfig": {
                    "SubnetIds": [], 
                    "SecurityGroupIds": []
                }, 
                "MemorySize": 128, 
                "CodeSize": 1722, 
                "FunctionArn": "arn:aws:lambda:us-west-2:644160558196:function:myIOTFunction", 
                "Handler": "index.handler", 
                "Role": "arn:aws:iam::644160558196:role/service-role/myIOTLambdaRole", 
                "Timeout": 3, 
                "LastModified": "2016-10-18T13:35:54.616+0000", 
                "Runtime": "nodejs4.3", 
                "Description": "An AWS Lambda function that sends an email on the click of an IoT button."
            }, 
            {
                "Version": "$LATEST", 
                "CodeSha256": "K79fnDjyvKpxtnkJcGLGbT5ypm5g6XHwWZGW25Kf0lw=", 
                "FunctionName": "c7n-cleanup", 
                "MemorySize": 512, 
                "CodeSize": 558, 
                "FunctionArn": "arn:aws:lambda:us-west-2:644160558196:function:c7n-cleanup", 
                "Handler": "lambda_function.lambda_handler", 
                "Role": "arn:aws:iam::644160558196:role/lambda_basic_execution", 
                "Timeout": 300, 
                "LastModified": "2016-10-20T17:26:47.706+0000", 
                "Runtime": "python3.6", 
                "Description": "c7n Cleanup Function"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "b0391b6e-a0eb-11e6-8561-73bbd73c1098", 
            "HTTPHeaders": {
                "date": "Wed, 02 Nov 2016 11:01:21 GMT", 
                "x-amzn-requestid": "b0391b6e-a0eb-11e6-8561-73bbd73c1098", 
                "content-length": "1159", 
                "content-type": "application/json", 
                "connection": "keep-alive"
            }
        }
    }
}
